--- a/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
@@ -1,30 +1,44 @@
-<div class="map-container">
-	<div #gmap class="g-map"></div>
+<div class="delivery-container">
+	<div class="map-container">
+		<div #gmap class="g-map"></div>
+	</div>
 	<div class="zones">
 		<div class="zones-form">
 			<div class="col-sm-12" [formGroup]="form" *ngIf="form">
-				<fieldset>
-					<div *ngIf="!selectedShape" class="form-group row mb-4">
-						<div class="col-sm-12 btn-container">
-							<button
-								(click)="
-									selectedShape = 'circle'; startDrawing()
-								"
-								nbButton
-							>
-								Circle
-							</button>
-							<button
-								(click)="
-									selectedShape = 'shape'; startDrawing()
-								"
-								nbButton
-							>
-								Shape
-							</button>
-						</div>
+				<div
+					*ngIf="!selectedShapeType"
+					[hidden]="isEditing"
+					class="form-group row mb-4 centered"
+				>
+					<span>Select shape to add a new zone</span>
+					<div class="col-sm-12 btn-container">
+						<button
+							(click)="
+								selectedShapeType = 'circle'; startDrawing()
+							"
+							nbButton
+						>
+							Circle
+						</button>
+						<button
+							(click)="
+								selectedShapeType = 'shape'; startDrawing()
+							"
+							nbButton
+						>
+							Shape
+						</button>
 					</div>
+				</div>
 
+				<span
+					class="mb-4"
+					*ngIf="!shapeReady && selectedShapeType"
+					[hidden]="isEditing"
+					>Draw a shape on the map</span
+				>
+
+				<fieldset *ngIf="shapeReady || isEditing">
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
@@ -44,7 +58,7 @@
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
-							>*Minimum amount</label
+							>Minimum amount</label
 						>
 
 						<div class="col-sm-8">
@@ -60,7 +74,7 @@
 					<div class="form-group row">
 						<label
 							class="col-sm-4 d-flex align-items-center control-label"
-							>*Delivery fee</label
+							>Delivery fee</label
 						>
 
 						<div class="col-sm-8">
@@ -79,12 +93,12 @@
 						</div>
 					</div>
 
-					<div *ngIf="selectedShape" class="form-group row">
-						<div class="col-sm-12 btn-container">
+					<div class="form-group row">
+						<div *ngIf="shapeReady" class="col-sm-12 btn-container">
 							<button
-								(click)="cancel()"
+								(click)="cancelAdd()"
 								nbButton
-								class="btn btn-warning"
+								class="btn btn-wa rning"
 							>
 								Cancel
 							</button>
@@ -94,23 +108,56 @@
 								"
 								nbButton
 								class="btn btn-primary"
+								(click)="addZone()"
 							>
 								Add
+							</button>
+						</div>
+
+						<div
+							*ngIf="isEditing && !shapeReady"
+							class="col-sm-12 btn-container"
+						>
+							<button
+								(click)="closeEdit()"
+								nbButton
+								class="btn btn-warning"
+							>
+								Cancel
+							</button>
+							<button
+								[disabled]="form.status === 'INVALID'"
+								nbButton
+								class="btn btn-primary"
+								(click)="editZone()"
+							>
+								Edit
 							</button>
 						</div>
 					</div>
 				</fieldset>
 			</div>
 		</div>
-		<div class="zones-list">
+		<div *ngIf="zonesObjects.length > 0" class="zones-list">
 			<ul>
-				<li>
-					<span>
-						Zone 1
-					</span>
-					<div class="btn-container">
-						<i class="far fa-trash-alt"></i>
-						<i class="far fa-edit"></i>
+				<li *ngFor="let zone of zonesObjects; let i = index">
+					<div
+						(mouseenter)="highlightZone(zone)"
+						(mouseleave)="removeHighlight(zone)"
+					>
+						<span>
+							{{ zone.properties.name }}
+						</span>
+						<div class="btn-container">
+							<i
+								class="far fa-edit"
+								(click)="setSelection(zone)"
+							></i>
+							<i
+								class="far fa-trash-alt"
+								(click)="deleteZone(zone)"
+							></i>
+						</div>
 					</div>
 				</li>
 			</ul>
