--- a/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -6,49 +6,84 @@
 			<nb-card>
 				<nb-card-body>
 					<nb-stepper #nbStepper orientation="vertical">
-						<nb-step label="Account">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.ACCOUNT'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-account
 								#account
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-account>
 						</nb-step>
-						<nb-step label="Basic info">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.BASIC_INFO'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-basic-info
 								#basicInfo
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-basic-info>
 						</nb-step>
-						<nb-step label="Contact info">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.CONTACT_INFO'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-contact-info
 								#contactInfo
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-contact-info>
 						</nb-step>
-						<nb-step label="Location">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.LOCATION'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-location
 								#location
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-location>
 						</nb-step>
-						<nb-step label="Payments">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.PAYMENTS'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-payments
 								#payments
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-payments>
 						</nb-step>
-						<nb-step label="Manufacturing">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.MANUFACTURING'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-manufacturing
 								#manufacturing
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-manufacturing>
 						</nb-step>
-						<nb-step label="Delivery & Takeaway Settings">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.DELIVERY_AND_TAKEAWAY_SETTINGS'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-delivery-takeaway
 								[locationForm]="location.locationForm"
 								#deliveryAndTakeaway
@@ -56,7 +91,12 @@
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-delivery-takeaway>
 						</nb-step>
-						<nb-step label="Orders Settings">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.ORDERS_SETTINGS'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-orders-settings
 								#ordersSettings
 								(previousStep)="nbStepper.previous()"
@@ -64,14 +104,24 @@
 								[canCreateMerchant]="canCreateMerchant"
 							></ea-merchants-setup-orders-settings>
 						</nb-step>
-						<nb-step label="Product categories">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.PRODUCT_CATEGORIES'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-product-categories
 								#productCategories
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
 							></ea-merchants-setup-product-categories>
 						</nb-step>
-						<nb-step label="Products">
+						<nb-step
+							label="{{
+								'FAKE_DATA.SETUP_MERCHANTS.STEPPER.PRODUCTS'
+									| translate
+							}}"
+						>
 							<ea-merchants-setup-products
 								[storeId]="currentStore?.id"
 								#products
