feat(ever-admin): added new page and track button

--- a/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -21,6 +21,13 @@
 				'WAREHOUSES_VIEW.DELETE' | translate
 			}}</small>
 		</button>
+		<button
+			class="btn btn-warning btn-sm mr-2 d-inline-block"
+			routerLink="track"
+		>
+			<i class="ion-md-trash button-icon"></i>
+			<small _ngcontent-c55="">Show on Map</small>
+		</button>
 	</nb-card-header>
 
 	<nb-card-body>
