--- a/admin/website-angular/src/app/@shared/warehouse/forms/basic-info/basic-info-form.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/basic-info/basic-info-form.component.html
@@ -142,7 +142,7 @@
 
 			<div class="col-sm-8">
 				<input
-					type="text"
+					type="password"
 					class="form-control"
 					placeholder="{{ 'PLACEHOLDER.PASSWORD' | translate }}"
 					[formControl]="password"
