--- a/admin/website-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
@@ -16,7 +16,7 @@
 >
 	<wizard-step
 		[title]="'WAREHOUSE_VIEW.MUTATION.WIZARD_TITLES.BASIC_INFO' | translate"
-		[isValid]="basicInfo.valid"
+		[isValid]="basicInfo.valid && password.valid"
 	>
 		<div class="pt-5"></div>
 		<ea-warehouse-basic-info-form
