feat(ever-admin): center the icons in the categories table EV-1223

--- a/admin/website-angular/src/app/@theme/styles/styles.scss
+++ b/admin/website-angular/src/app/@theme/styles/styles.scss
@@ -77,6 +77,10 @@
 	padding: 0 !important;
 }
 
+.category-table td.ng2-smart-actions.ng-star-inserted {
+	padding: 0 !important;
+}
+
 ea-warehouse-product-create {
 	max-height: 800px;
 	// overflow: scroll;
