--- a/admin/website-angular/src/app/@shared/product/categories/categories-table/categories-table.component.html
+++ b/admin/website-angular/src/app/@shared/product/categories/categories-table/categories-table.component.html
@@ -1,4 +1,5 @@
 <ng2-smart-table
+	class="category-table"
 	[settings]="settingsSmartTable"
 	[source]="sourceSmartTable"
 	(userRowSelect)="selectCategoryTmp($event)"
