feat(ever-admin): add translate EV-1224

--- a/admin/website-angular/src/app/pages/+carriers/carriers.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/carriers.component.html
@@ -22,7 +22,7 @@
 			routerLink="track"
 		>
 			<i class="ion-md-map button-icon"></i>
-			Track
+			{{ 'CARRIERS_VIEW.TRACK' | translate }}
 		</button>
 	</nb-card-header>
 	<nb-card-body [nbSpinner]="loading">
