--- a/admin/website-angular/src/app/pages/+carriers/track/carrier-tracking/carrier-tracking.component.html
+++ b/admin/website-angular/src/app/pages/+carriers/track/carrier-tracking/carrier-tracking.component.html
@@ -5,7 +5,7 @@
 				<nb-card>
 					<nb-card-header>
 						{{
-							'CARRIERS_VIEW.TRACK.TRACK_ALL_WORKING_CARRIERS'
+							'CARRIERS_VIEW.TRACK_PAGE.TRACK_ALL_WORKING_CARRIERS'
 								| translate
 						}}
 					</nb-card-header>
@@ -18,7 +18,10 @@
 			<div class="col-4">
 				<nb-card>
 					<nb-card-header>
-						{{ 'CARRIERS_VIEW.TRACK.FILTER_CARRIERS' | translate }}
+						{{
+							'CARRIERS_VIEW.TRACK_PAGE.FILTER_CARRIERS'
+								| translate
+						}}
 					</nb-card-header>
 					<nb-card-body style="overflow:inherit;">
 						<div>
