feat: getting closer to sending and receiving data

--- a/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/warehouse-manage-tabs.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/warehouse-manage-tabs.component.html
@@ -61,7 +61,9 @@
 		class="pt-5 pb-3"
 	>
 		<ea-warehouse-manage-tabs-delivery-areas
+			#deliveryAreasForm
 			[mapCoordEvent]="mapCoordEmitter"
+			[form]="deliveryAreas"
 		>
 		</ea-warehouse-manage-tabs-delivery-areas>
 	</nb-tab>
