--- a/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
+++ b/admin/website-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
@@ -4,7 +4,11 @@
 	</div>
 	<div class="zones">
 		<div class="zones-form">
-			<div class="col-sm-12" [formGroup]="form" *ngIf="form">
+			<div
+				class="col-sm-12"
+				[formGroup]="deliverForm"
+				*ngIf="deliverForm"
+			>
 				<div
 					*ngIf="!selectedShapeType"
 					[hidden]="isEditing"
@@ -64,6 +68,7 @@
 						<div class="col-sm-8">
 							<input
 								type="number"
+								step="0.1"
 								class="form-control"
 								placeholder="Minimum amount"
 								formControlName="amount"
@@ -80,6 +85,7 @@
 						<div class="col-sm-8">
 							<input
 								type="number"
+								step="0.1"
 								class="form-control"
 								placeholder="Delvery fee"
 								formControlName="fee"
@@ -102,9 +108,11 @@
 							>
 								Cancel
 							</button>
+
 							<button
 								[disabled]="
-									!shapeReady || form.status === 'INVALID'
+									!shapeReady ||
+									deliverForm.status === 'INVALID'
 								"
 								nbButton
 								class="btn btn-primary"
@@ -126,7 +134,7 @@
 								Cancel
 							</button>
 							<button
-								[disabled]="form.status === 'INVALID'"
+								[disabled]="deliverForm.status === 'INVALID'"
 								nbButton
 								class="btn btn-primary"
 								(click)="editZone()"
