Feature/ev 1227 improve initial start for web/mobile shop (#507)
* feat(ever-shop-mobile): improved mobile app EV-1227

* feat(ever-shop-web): improved initial start on Web Shop app EV-1227

* fix: fixed wrong code and some syntactic errors

--- a/shop/website-angular/src/app/toolbar/toolbar.component.html
+++ b/shop/website-angular/src/app/toolbar/toolbar.component.html
@@ -52,7 +52,7 @@
 			[color]="styleVariables.brandLighted"
 			focusedColor="#f1f1f1"
 			(searchLocation)="tryFindNewAddress($event)"
-			(detectLocation)="laodAddress(true)"
+			(detectLocation)="loadAddress(true)"
 		></mat-search>
 	</section>
 
