--- a/shop/mobile-ionic/src/app/pages/+invite/+by-location/by-location.page.html
+++ b/shop/mobile-ionic/src/app/pages/+invite/+by-location/by-location.page.html
@@ -1,18 +1,23 @@
 <div class="by-location" dir="{{ 'CURRENT_DIRECTION' | translate }}">
+	<h1>{{ 'INVITE_VIEW.YOUR_ADDRESS' | translate }}</h1>
 
-	<h1> {{ 'INVITE_VIEW.YOUR_ADDRESS' | translate }} </h1>
-
-	<h2> {{ 'INVITE_VIEW.LAUNCH_NOTIFICATION' | translate }} </h2>
+	<h2>{{ 'INVITE_VIEW.LAUNCH_NOTIFICATION' | translate }}</h2>
 
 	<div style="padding-top: 50px" *ngIf="detectingLocation">
-		<h3 style="color: white"> {{ 'INVITE_VIEW.DETECTING_LOCATION' | translate }} </h3>
-		<br/>
+		<h3 style="color: white">
+			{{ 'INVITE_VIEW.DETECTING_LOCATION' | translate }}
+		</h3>
+		<br />
 	</div>
 
 	<ion-spinner color="light" [hidden]="!detectingLocation"></ion-spinner>
 
 	<div *ngIf="!detectingLocation">
-		<input class="ion-autocomplete" [(ngModel)]="city" placeholder="{{ 'CITY' | translate }}" />
+		<input
+			class="ion-autocomplete"
+			[(ngModel)]="city"
+			placeholder="{{ 'CITY' | translate }}"
+		/>
 		<!--<input ion-autocomplete type="text" readonly="readonly" class="ion-autocomplete" autocomplete="off"
 			   [(ngModel)]="city" max-selected-items="1"
 			   items-method="inviteByLocationCtrl?.queryCities(query)" selected-items-label="Selected City"
@@ -21,8 +26,12 @@
 		<!-- Angular have no such label:
           cancel-label="{{ 'BACK' | translate }}"       -->
 
-		<div *ngIf='city'>
-			<input class="ion-autocomplete" [(ngModel)]="streetAddress" placeholder="{{ 'STREET' | translate }}" />
+		<div *ngIf="city">
+			<input
+				class="ion-autocomplete"
+				[(ngModel)]="streetAddress"
+				placeholder="{{ 'STREET' | translate }}"
+			/>
 			<!--<input ion-autocomplete readonly class="ion-autocomplete" autocomplete="off" [(ngModel)]="streetAddress"
 				   max-selected-items="1"
 				   items-method="inviteByLocationCtrl?.queryStreets(query)" selected-items-label="Selected Street"
@@ -30,26 +39,48 @@
 			<!-- Angular have no such label:
               cancel-label="{{ 'BACK' | translate }}"       -->
 
-			<div *ngIf='streetAddress'>
+			<div *ngIf="streetAddress">
 				<ion-grid no-padding>
 					<ion-row class="house-and-apartment">
 						<ion-col no-padding>
-							<div class="house house-{{ 'CURRENT_DIRECTION' | translate }}">
-								<input type="number" [(ngModel)]="house" placeholder="{{ 'HOUSE' | translate }}" />
+							<div
+								class="house house-{{
+									'CURRENT_DIRECTION' | translate
+								}}"
+							>
+								<input
+									type="number"
+									[(ngModel)]="house"
+									placeholder="{{ 'HOUSE' | translate }}"
+								/>
 							</div>
 						</ion-col>
 
 						<ion-col no-padding>
 							<div class="apartment">
-								<input type="number" *ngIf="isApartment" [(ngModel)]="apartment" placeholder="{{ 'APARTMENT' | translate }}" class="apartment apartment-{{ 'CURRENT_DIRECTION' | translate }}"
+								<input
+									type="number"
+									*ngIf="isApartment"
+									[(ngModel)]="apartment"
+									placeholder="{{ 'APARTMENT' | translate }}"
+									class="apartment apartment-{{
+										'CURRENT_DIRECTION' | translate
+									}}"
 								/>
 
-								<div *ngIf="!apartment" class="is-apartment is-apartment-{{ 'CURRENT_DIRECTION' | translate }}">
+								<div
+									*ngIf="!apartment"
+									class="is-apartment is-apartment-{{
+										'CURRENT_DIRECTION' | translate
+									}}"
+								>
 									<span class="description">
 										{{ 'APARTMENT' | translate }}
 									</span>
 									<label class="toggle toggle-assertive">
-										<ion-checkbox [(ngModel)]="isApartment"></ion-checkbox>
+										<ion-checkbox
+											[(ngModel)]="isApartment"
+										></ion-checkbox>
 										<div class="track">
 											<div class="handle"></div>
 										</div>
@@ -59,7 +90,13 @@
 						</ion-col>
 					</ion-row>
 				</ion-grid>
-				<ion-button color="secondary" *ngIf="house && (apartment || !isApartment)" expand="block" class="submit-button" (click)="login()">
+				<ion-button
+					color="secondary"
+					*ngIf="house && (apartment || !isApartment)"
+					expand="block"
+					class="submit-button"
+					(click)="login()"
+				>
 					{{ 'INVITE_VIEW.GET_IN' | translate }}
 				</ion-button>
 			</div>
