--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
@@ -1,1 +1,155 @@
-Hello I'm a tracker
+<div class="row">
+	<div class="col-12">
+		<div class="row">
+			<div class="col-8">
+				<nb-card>
+					<nb-card-header>
+						Track all working carriers
+					</nb-card-header>
+					<nb-card-body>
+						<div #gmap class="googleMap"></div>
+					</nb-card-body>
+				</nb-card>
+			</div>
+
+			<div class="col-4">
+				<nb-card>
+					<nb-card-header>
+						Filter Carriers
+					</nb-card-header>
+					<nb-card-body style="overflow:inherit;">
+						<div>
+							<ng-select
+								[items]="stores"
+								placeholder="{{
+									'DASHBOARD_VIEW.SELECT_COMPONENT.SELECT_STORE'
+										| translate
+								}}"
+								[clearable]="false"
+								bindLabel="id"
+								style="width:100%;margin-bottom:30px;"
+								(change)="storeListener($event)"
+								[(ngModel)]="selectedStore"
+							>
+								<ng-template ng-label-tmp let-item="item">
+									<img
+										*ngIf="item.logo"
+										height="15"
+										width="15"
+										class="mr-2"
+										[src]="item.logo"
+									/>
+									<b>{{ item.name }}</b>
+								</ng-template>
+								<ng-template
+									ng-option-tmp
+									let-item="item"
+									let-index="index"
+								>
+									<h6 class="card-title">
+										<img
+											*ngIf="item.logo"
+											height="40"
+											width="40"
+											class="mr-1"
+											[src]="item.logo"
+										/>
+										{{ item.name }}
+									</h6>
+								</ng-template>
+							</ng-select>
+							<ng-select
+								(change)="carrierListener($event)"
+								[items]="filteredCarriersList"
+								[(ngModel)]="selectedCarrier"
+								[clearable]="false"
+								placeholder="{{
+									'CARRIERS_VIEW.CARRIER_PAGE.SELECT_CARRIER'
+										| translate
+								}}"
+								bindLabel="fullName"
+								style="width:100%; margin-bottom:30px;"
+							>
+								<ng-template ng-label-tmp let-item="item">
+									<img
+										*ngIf="item.logo"
+										height="15"
+										width="15"
+										class="mr-2"
+										[src]="item.logo"
+									/>
+									{{ item.fullName }}
+								</ng-template>
+								<ng-template
+									ng-option-tmp
+									let-item="item"
+									let-index="index"
+								>
+									<h6 class="card-title">
+										<img
+											*ngIf="item.logo"
+											height="40"
+											width="40"
+											class="mr-1"
+											[src]="item.logo"
+										/>
+										{{ item.fullName }}
+									</h6>
+								</ng-template>
+							</ng-select>
+						</div>
+						<nb-card-footer>
+							<div class="details">
+								<div class="warehouse" *ngIf="selectedStore">
+									<h5>
+										<b>{{ selectedStore.name }}</b>
+									</h5>
+									<ul>
+										<li>
+											Phone:
+											{{ selectedStore.contactPhone }}
+										</li>
+										<li>
+											Email:
+											{{ selectedStore.contactEmail }}
+										</li>
+										<li>
+											Address:
+											{{
+												selectedStore.geoLocation
+													.streetAddress
+											}}
+										</li>
+									</ul>
+								</div>
+								<div class="carrier" *ngIf="selectedCarrier">
+									<h5>
+										<b>{{ selectedCarrier.fullName }}</b>
+									</h5>
+									<ul>
+										<li>
+											Delivery Count:
+											{{
+												selectedCarrier.numberOfDeliveries
+											}}
+										</li>
+										<li>
+											Phone: {{ selectedCarrier.phone }}
+										</li>
+										<li>
+											Address:
+											{{
+												selectedCarrier.geoLocation
+													.streetAddress
+											}}
+										</li>
+									</ul>
+								</div>
+							</div>
+						</nb-card-footer>
+					</nb-card-body>
+				</nb-card>
+			</div>
+		</div>
+	</div>
+</div>
