feat(ever-admin): added merchant markers on map

--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
@@ -4,7 +4,7 @@
 			<div class="col-8">
 				<nb-card>
 					<nb-card-header>
-						Track all working carriers
+						Track all merchants
 					</nb-card-header>
 					<nb-card-body>
 						<div #gmap class="googleMap"></div>
@@ -15,7 +15,7 @@
 			<div class="col-4">
 				<nb-card>
 					<nb-card-header>
-						Filter Carriers
+						Filter Merchants
 					</nb-card-header>
 					<nb-card-body style="overflow:inherit;">
 						<div>
