--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
@@ -4,13 +4,18 @@
 	</nb-card-header>
 	<nb-card-body>
 		<div class="row m-0">
-			<div class="form-group offset-md-2 col-md-10">
+			<div class="form-group offset-md-2 col-md-8">
 				<nb-checkbox [(ngModel)]="isPaymentEnabled">
 					{{
 						'FAKE_DATA.SETUP_MERCHANTS.PAYMENTS.ALLOW_ONLINE_PAYMENT'
 							| translate
 					}}
 				</nb-checkbox>
+			</div>
+		</div>
+		<div [hidden]="!isPaymentEnabled" class="row m-0">
+			<div class="form-group offset-md-2 col-md-8">
+				<ea-payment-gateways></ea-payment-gateways>
 			</div>
 		</div>
 	</nb-card-body>
