feat(ever-admin): add form for config Stripe gateway EV-1192

--- a/admin/website-angular/src/app/@theme/styles/styles.scss
+++ b/admin/website-angular/src/app/@theme/styles/styles.scss
@@ -206,3 +206,24 @@ nb-card.no-box-shadow {
 	box-shadow: none;
 	margin-bottom: 0;
 }
+
+.preview-img-container {
+	.preview-img {
+		padding-right: 16px;
+	}
+
+	.img-rounded {
+		margin-top: 3px;
+		max-height: 70px !important;
+	}
+
+	.remove-icon {
+		cursor: pointer;
+
+		span {
+			padding-right: 7px;
+			position: absolute;
+			font-size: 1.1em;
+		}
+	}
+}
