--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payPal-gateway/payPal-gateway.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payPal-gateway/payPal-gateway.component.html
@@ -1,1 +1,8 @@
-<h4>{{ name }} payment gateway</h4>
+<div class="row m-0">
+	<div class="form-group col-md-12 p-0">
+		<nb-checkbox [(ngModel)]="isPayPalEnabled">
+			<img src="{{ logo }}" width="20px" alt="" />
+			{{ name }}
+		</nb-checkbox>
+	</div>
+</div>
