feat(ever-admin): add Currency entity and interface EV-1192

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/stripe-gateway/stripe-gateway.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/stripe-gateway/stripe-gateway.component.html
@@ -132,7 +132,7 @@
 
 	<div class="row m-0">
 		<div class="form-group col-md-12">
-			<label for="publishable-key">
+			<label for="publishableKey">
 				Publishable key
 			</label>
 			<input
