feat(ever-admin): load default currency in Payment step EV-1192

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
@@ -1,2 +1,5 @@
-<ea-stripe-gateway [companyBrandLogo]="warehouseLogo"></ea-stripe-gateway>
+<ea-stripe-gateway
+	[companyBrandLogo]="warehouseLogo"
+	[warehouseCountry]="warehouseCountry"
+></ea-stripe-gateway>
 <ea-payPal-gateway></ea-payPal-gateway>
