--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payments.component.html
@@ -17,6 +17,7 @@
 			<div class="form-group offset-md-2 col-md-8">
 				<ea-payment-gateways
 					[warehouseLogo]="warehouseLogo"
+					[warehouseCountry]="locationForm.countryId.value"
 				></ea-payment-gateways>
 			</div>
 		</div>
