--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
@@ -1,4 +1,5 @@
 <ea-stripe-gateway
+	#stripeGateway
 	[companyBrandLogo]="warehouseLogo"
 	[warehouseCountry]="warehouseCountry"
 ></ea-stripe-gateway>
