feat(ever-admin): improved validation on the Payments step EV-1192

--- a/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
+++ b/admin/website-angular/src/app/pages/+setup/+merchants/components/payments/payment-gateways/payment-gateways.component.html
@@ -3,4 +3,4 @@
 	[companyBrandLogo]="warehouseLogo"
 	[warehouseCountry]="warehouseCountry"
 ></ea-stripe-gateway>
-<ea-payPal-gateway></ea-payPal-gateway>
+<ea-payPal-gateway #payPalGateway></ea-payPal-gateway>
