--- a/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
+++ b/admin/website-angular/src/app/pages/+warehouses/+warehouse-track/warehouse-track.component.html
@@ -20,7 +20,7 @@
 					<nb-card-body style="overflow:inherit;">
 						<div>
 							<ng-select
-								[items]="merchants"
+								[items]="listOfMerchants"
 								placeholder="Filter by Name"
 								[clearable]="true"
 								bindLabel="name"
@@ -36,7 +36,7 @@
 										class="mr-2"
 										[src]="item.logo"
 									/>
-									<b>{{ item.name }}</b>
+									<b>{{ item }}</b>
 								</ng-template>
 							</ng-select>
 							<ng-select
